+ Added RewardAction & RewardTier & LevelReward & LevelRewardRegistry to manage 500 Level reward system for tycoons + Added SpawnMaterialRarity's to SpawnMaterial's to give different worth and xp worth